# hic-pipeline

./: .dockerignore  .dockstore.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  3d_dna.wdl  Cargo.toml  Jenkinsfile  README.md  align.1.json  align.dnanexus.json  align.dnanexus.real.json  align.google.json  align.google.paired.json  align.google.single.json  align.json  align.wdl  align_input.json  align_task.wdl  align_two.json  create_hic.wdl  create_hic_input.json  cromwell-32.jar.1  croo_out_def.json  delta.wdl  diploidify.wdl  dockstore_test_input.json  double_pair.json  genophase.wdl  google_ex_1.json  google_input.json  gpu.json  hic.wdl  hic_from_pre.wdl  hic_sub.wdl  hiccups_test.wdl  input.json  local.json  make_restriction_site_locations.wdl  megamap.wdl  (+20 more)
.circleci/: Dockerfile  config.yml
backends/: backend.conf
croo/: hic.out_def.json
docker_image/: Dockerfile
docs/: CONTRIBUTING.md  development.md  input.md  output.md  reference.md  tutorial_google.md  tutorial_local_docker.md  tutorial_local_singularity.md  tutorial_slurm_singularity.md  usage.md
examples/: google_template.json  template_one.json  template_three.json  template_two.json
hic_pipeline/: __init__.py  count_unique_reads.awk  filter_chrom_sizes.py  get_ligation_site_regex.py  jsonify_stats.py  normalize_assembly_name.py
nvidia_docker_image/: Dockerfile
scripts/: make_diploidify_input_json_from_portal.py  make_genophase_input_json_from_portal.py  make_input_json_from_portal.py  make_megamap_input_json_from_portal.py
src/: compare_md5.py  create_json_qc.py
(+296 files in other folders)
